# judb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  IDEAS.md  IMPLEMENTATION_PLAN.md  Makefile  NOTICE  PHASE2_STACK.md  PHASE3_PLAN.md  README.md  RELEASING.md  REQUIREMENT_ANALYSIS.md  hatch_build.py  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
changelog.d/: +editable-install-no-node.fixed.md  +forked-child.fixed.md  +initial-release.added.md  +interactive-mpl.added.md  +last-line-set-trace.fixed.md  +pytest-entrypoint.added.md  +reconnect.fixed.md  +run-module.added.md  +slim-install.changed.md  +threads-processes.docs.md  README.md
frontend/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/e2e/: debuggee.py  plot.spec.ts
frontend/src/: App.svelte  main.ts  protocol.ts
frontend/src/lib/: Output.svelte  Output.test.ts  PaneBox.svelte  Toolbar.svelte  WebAggFigure.svelte  app-environment-shim.ts  codemirror.ts  connection.svelte.ts  connection.test.ts  mplClient.ts  richOutput.test.ts  richOutput.ts  theme.svelte.ts  theme.test.ts  tokens.css
frontend/src/panes/: ConsolePane.svelte  NotebookCell.svelte  SourcePane.svelte  StackPane.svelte  VarNode.svelte  VariablesPane.svelte
judb/: __init__.py  __main__.py  console.py  debugger.py  mpl_backend.py  protocol.py  server.py
judb/static/: index.html
licenses/: jupyter-LICENSE.txt  matplotlib-LICENSE.txt  pudb-LICENSE.txt
scripts/: demo.py  demo_p1.py  demo_p2.py  demo_rich.py  release_notes.py  smoke_install.py  smoke_install.sh
tests/: helpers.py  test_console.py  test_debugger.py  test_entrypoints.py  test_mpl_backend.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_server.py
