[project]
name = "judb"
version = "0.1.0"
description = "A visual debugger for datascience — pudb-style stepping with a notebook-style rich console that runs in the paused frame."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "licenses/*"]
authors = [{ name = "Mika Pflüger" }]
dependencies = [
    "aiohttp>=3.9",
    "ipython>=8.0",
    "matplotlib>=3.7",
    "matplotlib-inline>=0.1.6",
    "numpy>=1.24",
    "pandas>=2.0",
    "pre-commit>=4.6.1",
]

[project.entry-points."matplotlib.backend"]
# Registers judb's interactive WebAgg backend so `%matplotlib judb` resolves it
# (the same mechanism matplotlib-inline uses for `%matplotlib inline`).
judb = "judb.mpl_backend"

[project.optional-dependencies]
# Rich objects used only by scripts/demo_rich.py — heavyweight datascience viz
# libraries we deliberately keep out of a normal `pip install judb`.
example = [
    "xarray>=2024.1",
    "altair>=5.2",
    "plotly>=5.20",
    "bokeh>=3.4",
    "polars>=1.0",
    "mpld3>=0.5.10",
    "nbformat>=5.0",  # plotly's mime renderer refuses to emit its bundle without it
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.22",
    "ty>=0.0.1a1",
    # Build backend; also a dev dep so ty can resolve hatch_build.py's imports.
    "hatchling",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Build the Svelte SPA into judb/static/index.html at package-build time.
# The bundle is gitignored (not committed), so it must be force-included via
# `artifacts` below (which un-ignores gitignored paths). See hatch_build.py.
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["judb"]
artifacts = ["judb/static/index.html"]

[tool.hatch.build.targets.sdist]
# Ship the pre-built bundle but not the frontend/ sources, so `pip install`
# from an sdist needs no Node/pnpm (the build hook reuses the shipped bundle).
exclude = ["/frontend"]
artifacts = ["judb/static/index.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.rules]
missing-type-argument = "error"
possibly-unresolved-reference = "warn"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["ANN", "PYI"]
preview = true

[tool.ruff.lint.per-file-ignores]
# Test functions don't need return type annotations.
"tests/**" = ["ANN201"]
