[project]
name = "judb"
dynamic = ["version"]
description = "A visual debugger for datascience — pudb-style stepping with a notebook-style rich console that runs in the paused frame."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "licenses/*"]
authors = [{ name = "Mika Pflüger" }]
# Small runtime deps, matplotlib is needed for our custom
# renderer.
dependencies = [
    "aiohttp>=3.9",
    "ipython>=8.0",
    "matplotlib>=3.7",
    "matplotlib-inline>=0.1.6",
]

[project.entry-points."matplotlib.backend"]
# Registers judb's interactive WebAgg backend so `%matplotlib judb` resolves it
# (the same mechanism matplotlib-inline uses for `%matplotlib inline`).
judb = "judb.mpl_backend"

[project.optional-dependencies]
# Rich objects used only by scripts/demo_rich.py — heavyweight datascience viz
# libraries we deliberately keep out of a normal `pip install judb`.
example = [
    "xarray>=2024.1",
    "altair>=5.2",
    "plotly>=5.20",
    "bokeh>=3.4",
    "polars>=1.0",
    "mpld3>=0.5.10",
    "nbformat>=5.0",  # plotly's mime renderer refuses to emit its bundle without it
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.22",
    "ty>=0.0.1a1",
    "pre-commit>=4.6.1",
    # Not judb runtime deps — only the tests and
    # scripts/demo_*.py use them.
    "numpy>=1.24",
    "pandas>=2.0",
    # License compliance check (`make license`).
    "pylic>=3.0",
    # Build backend; also a dev dep so ty can resolve hatch_build.py's imports.
    "hatchling",
    "towncrier>=25.8.0",
]

# Single source of truth for the version: judb/__init__.py (towncrier reads it
# too, so a release bumps exactly one line).
[tool.hatch.version]
path = "judb/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Build the Svelte SPA into judb/static/index.html at package-build time.
# The bundle is gitignored (not committed), so it must be force-included via
# `artifacts` below (which un-ignores gitignored paths). See hatch_build.py.
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["judb"]
artifacts = ["judb/static/index.html"]

[tool.hatch.build.targets.sdist]
# Ship the pre-built bundle but not the frontend/ sources, so `pip install`
# from an sdist needs no Node/pnpm (the build hook reuses the shipped bundle).
exclude = ["/frontend"]
artifacts = ["judb/static/index.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.rules]
missing-type-argument = "error"
possibly-unresolved-reference = "warn"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["ANN", "PYI"]
preview = true

[tool.ruff.lint.per-file-ignores]
# Test functions don't need return type annotations.
"tests/**" = ["ANN201"]

# License compliance (`make license`, via pylic). pylic scans the *whole* venv —
# runtime + dev/build tooling — splitting each package's license metadata into
# individual license strings and treating a package as safe if any is listed
# here. Every entry is a permissive license, except MPL-2.0 (`pathspec`), a
# build-time dependency we neither ship nor modify (MPL's file-level copyleft
# only reaches modified MPL files). Re-run `uv run pylic list` and add any new
# exact string when a dependency changes.
[tool.pylic]
safe_licenses = [
    "Apache 2.0",
    "Apache-2.0",
    "Apache-2.0 AND MIT",
    "Apache License 2.0",
    "Apache Software License",
    "BSD-2-Clause",
    "BSD-3-Clause",
    "BSD License",
    "ISC License (ISCL)",
    "MIT",
    "MIT-CMU",
    "MIT License",
    "Mozilla Public License 2.0 (MPL 2.0)",  # pathspec — build-only, not shipped
    "PSF-2.0",
    "Python Software Foundation License",
]

# Changelog fragments: every change drops a small file in changelog.d/ and
# `towncrier build` collates them at release time. Fragments never collide, so
# several branches in flight don't fight over CHANGELOG.md.
[tool.towncrier]
package = "judb"
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/mikapfl/judb/releases/tag/v{version}) — {project_date}"
issue_format = "[#{issue}](https://github.com/mikapfl/judb/issues/{issue})"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation"
showcontent = true

# Escape hatch for changes with nothing to tell users (CI, refactors): a
# `+something.misc.md` satisfies `towncrier check` but renders nothing.
[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false
